--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "dependencies": {
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
@@ -6,7 +7,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.1",
+    "mongoose": "^8.0.2",
     "twilio": "^4.19.0"
   },
   "scripts": {
@@ -15,7 +16,6 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
