--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,5 @@
 {
   "type": "module",
-  "engines": {
-    "node": ">=14.0.0"
-  },
   "dependencies": {
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
@@ -11,10 +8,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "nodemon": "^3.0.1",
     "twilio": "^4.19.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   },
   "scripts": {
     "start": "node server.js",
