--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,8 @@
     "twilio": "^4.19.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "name": "index",
   "version": "1.0.0",
