--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,10 @@
     "nodemon": "^3.0.1",
     "twilio": "^4.19.0"
   },
+  "engines": {
+    "node": "14.x"
+  },
+  
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
